--- a/customeclipse.example.tycho/pom.xml
+++ b/customeclipse.example.tycho/pom.xml
@@ -15,6 +15,8 @@
 
 		<module>../Muge_Pugins</module>
 		<module>../customeclipse.example.ide.site</module>
+		<module>../../../eclipse-workspace/mugeplugin.test</module>
+		
 	</modules>
 
 	<properties>
