--- a/Muge_Pugins/plugin.xml
+++ b/Muge_Pugins/plugin.xml
@@ -5,8 +5,12 @@
          point="org.eclipse.ui.newWizards">
       <category id="icterra.muge.category.wizards" name="Muge Wizards"></category>
       <wizard id="icterra.muge.wizard.new.mugeProj" 
-      			name="Muge Project" 
-      			class="icterra.muge.category.wizards.MugeProjectNewWizard"
+      			name="X-Ray Project" 
+      			class="icterra.muge.category.wizards.MugeXRayProjectNewWizard"
+      			category="icterra.muge.category.wizards"></wizard>
+      <wizard id="icterra.muge.wizard.new.mugeProj" 
+      			name="CT Project" 
+      			class="icterra.muge.category.wizards.MugeCTProjectNewWizard"
       			category="icterra.muge.category.wizards"></wizard>
    </extension>
    <extension
